--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ jinja2==3.1.4
 requests==2.31.0
 vnstock3==3.1.0
 python-dotenv==1.0.1
+grpcio==1.68.0
+grpcio-tools==1.68.0
+google-generativeai==0.8.3
+webscout
