--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 boto3>=1.33.0
+aioboto3
 botocore>=1.21.0
 pydantic==2.5.1
 bedrock-llm==0.1.8.5
@@ -13,3 +14,5 @@ grpcio==1.68.0
 grpcio-tools==1.68.0
 google-generativeai==0.8.3
 webscout
+arcade-ai[fastapi]
+aiofiles==24.1.0
