--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
-boto3==1.28.0
-aioboto3==11.0.0
+boto3>=1.28.0<=1.30
+aioboto3
 pydantic==2.5.1
 bedrock-llm
 jinja2==3.1.4
